# ungula-net

./: API.md  README.md  library.properties
src/: ungula_net.h
src/comm/: esp_now_transport.cpp  esp_now_transport.h  i_transport.h  message_header.h  transport_types.h
src/connection/: connection_config.h  connection_manager.cpp  connection_manager.h  espnow_session_provider.cpp  espnow_session_provider.h  i_session_provider.h  reconnect_messages.h
src/http/: http_client.cpp  http_client.h  http_server.cpp  http_server.h
src/ntp/: ntp_client.cpp  ntp_client.h  ntp_time_provider.cpp  ntp_time_provider.h
src/pairing/: pairing_beacon.h  pairing_client.cpp  pairing_client.h  pairing_coordinator.cpp  pairing_coordinator.h  pairing_types.h
src/platform/: arduino_compat.cpp
src/wifi/: wifi_ap.cpp  wifi_ap.h  wifi_channel.h  wifi_config.cpp  wifi_config.h  wifi_espnow.cpp  wifi_espnow.h  wifi_sta.cpp  wifi_sta.h
tests/: 2_run.sh  CMakeLists.txt  test_http_client.cpp  test_i18n.cpp  test_ntp_time_provider.cpp
